--- a/SignUp/src/app/signup/signup.component.html
+++ b/SignUp/src/app/signup/signup.component.html
@@ -1,7 +1,7 @@
 
 <div>
     <mat-card>  
-        <h1 fxLayoutAlign="center center" class="main-div" >Welcome To Our Website </h1>     
+        <h1 fxLayoutAlign="center center" class="main-div img" >Welcome To Our Website </h1>     
     </mat-card>
 </div>
 
