--- a/SignUp/src/app/login/login.component.html
+++ b/SignUp/src/app/login/login.component.html
@@ -23,7 +23,7 @@
 			<button mat-raised-button type="submit" id="button" class="btn btn-primary btn-success">Login</button>
 		  </form>
 		  <p id="para">Don't have an account?</p>
-		  <a href="#"  id="para" >Sign up</a>
+		  <a href="/SignUp/src/app/signup/signup.component.html"  id="para" >Sign up</a>
 
 		  
 		  
