--- a/SignUp/src/app/signup/signup.component.html
+++ b/SignUp/src/app/signup/signup.component.html
@@ -1,12 +1,5 @@
 
-<div>
-    <mat-card>  
-        <h1 fxLayoutAlign="center center" class="main-div img" >Welcome To Our Website </h1>     
-    </mat-card>
-</div>
-
-
-<div fxLayoutAlign="center center" fxFill class="main-div" >
+<div fxLayoutAlign="center center" fxFill class="main-div img" >
 
     <!-- <mat-card> </mat-card> -->
 
@@ -43,7 +36,8 @@
           </div>
 
         
-              <p id="para">Don't have an account? Sign Up</p>
+              <p id="para">Don't have an account?</p>
+              <a href="#" id="para">Sign Up</a>
 
     </mat-card>
 
