--- a/SignUp/src/app/login/login.component.html
+++ b/SignUp/src/app/login/login.component.html
@@ -1,9 +1,3 @@
-<!-- <div>
-	<mat-card>
-		<h1 fxLayoutAlign="center center" class="main-div" >Welcome To Our Website </h1>     
-
-	</mat-card>
-</div> -->
 
 <div fxLayoutAlign="center center" fxFlexFill class="main-div">
 	<mat-card fxFlex="35" style="margin:2em;">
@@ -23,7 +17,7 @@
 			<button mat-raised-button type="submit" id="button" class="btn btn-primary btn-success">Login</button>
 		  </form>
 		  <p id="para">Don't have an account?</p>
-		  <a href="/SignUp/src/app/signup/signup.component.html"  id="para" >Sign up</a>
+			<a id="para" routerLink="../signup" >Sign Up</a> 
 
 		  
 		  
