--- a/SignUp/src/app/signup/signup.component.html
+++ b/SignUp/src/app/signup/signup.component.html
@@ -1,44 +1,41 @@
+<div fxLayoutAlign="center center" fxFill class="main-div img">
 
-<div fxLayoutAlign="center center" fxFill class="main-div img" >
+  <!-- <mat-card> </mat-card> -->
 
-    <!-- <mat-card> </mat-card> -->
+  <mat-card fxFlex="30">
 
-    <mat-card fxFlex="30" > 
+    <mat-toolbar fxLayoutAlign="center center" color="primary"> SignUp</mat-toolbar>
 
-        <mat-toolbar fxLayoutAlign="center center"  color="primary"> SignUp</mat-toolbar>
+    <form fxLayoutAlign="stretch" fxLayout="column" class="mytask">
 
-        <form fxLayoutAlign="stretch" fxLayout="column" class="mytask" >
+      <mat-form-field appearance="fill">
+        <mat-label>Username</mat-label>
+        <input matInput type="text" placeholder="Enter-Name" value="">
+      </mat-form-field>
 
-            <mat-form-field appearance="fill">
-              <mat-label>Username</mat-label>
-              <input matInput type="text" placeholder="Enter-Name" value="">
-            </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>User Email-id </mat-label>
+        <input matInput type="email" placeholder="Enter-Id" value="">
+      </mat-form-field>
 
-            <mat-form-field appearance="fill">
-              <mat-label>User Email-id </mat-label>
-              <input matInput type="email" placeholder="Enter-Id" value="">
-            </mat-form-field>
-          
-            <mat-form-field appearance="fill">
-              <mat-label>Password</mat-label>
-              <input matInput type="password"  placeholder="Enter-Password" value="">
-            </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Password</mat-label>
+        <input matInput type="password" placeholder="Enter-Password" value="">
+      </mat-form-field>
 
-            <mat-form-field appearance="fill">
-              <mat-label>Re-Password</mat-label>
-              <input matInput type="password" placeholder="Enter-Password-Again" value="">
-            </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Re-Password</mat-label>
+        <input matInput type="password" placeholder="Enter-Password-Again" value="">
+      </mat-form-field>
 
-        
-          </form>
-          <div class="text-center">
-              <button mat-raised-button type="submit" class="btn btn-primary btn-success" >Submit</button>
-          </div>
+    </form>
+    <div class="text-center">
+      <button mat-raised-button type="submit" class="btn btn-primary btn-success">Submit</button>
+    </div>
 
-        
-              <p id="para">Don't have an account?</p>
-              <a href="#" id="para">Sign Up</a>
+    <p id="para">Already have an account?</p>
+    <a id="para" routerLink="../login" >login</a> 
 
-    </mat-card>
+  </mat-card>
 
 </div>
