--- a/SignUp/src/app/dashboard/dashboard.component.html
+++ b/SignUp/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,110 @@
-<p>dashboard works!</p>
+<mat-drawer-container>
+
+       <mat-drawer mode="side" [opened]="sideBarOpen">
+              <!-- <mat-drawer mode="side" opened="true"> -->
+              <app-sidenav> </app-sidenav>
+       </mat-drawer>
+
+       <mat-drawer-content>
+
+              <app-header (toggleSidebarForMe)="sideBarToggler()">
+              </app-header>
+              <router-outlet>
+                     <!-- <app-header></app-header> -->
+
+                     <mat-toolbar fxLayoutAlign="center center" >
+                            <span style="position:static"> DASHBOARD </span>
+                     </mat-toolbar>
+
+                     <div class="content" fxLayoutGap="15px grid">
+
+                            <mat-card class="mat-elevation-z4">
+                                   <mat-card-header>
+                                          <mat-card-title> Who Are We ? </mat-card-title>
+                                   </mat-card-header>
+
+                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quam,
+                                          nisi deleniti nesciunt totam iure dolor modi accusamus
+                                          asperiores, iste dolore architecto. Ex maiores iusto sed quod
+                                          voluptates deleniti reprehenderit Lorem ipsum dolor sit amet consectetur
+                                          adipisicing elit. Architecto, distinctio! Dignissimos cum neque minima
+                                          inventore ab assumenda necessitatibus deleniti quam in praesentium accusantium
+                                          porro quia maiores ea eaque itaque magni, quisquam repellat quo nobis fugit.
+                                   </p>
+
+                                   <mat-card-content>
+                                          <p>
+                                                 Thankyou For Reading.
+                                          </p>
+                                   </mat-card-content>
+                                   <mat-card-actions>
+                                          <div class="text-center">
+                                                 <button mat-button mat-raised-button class="btn-info"
+                                                        style="width : 9em;" routerLink="../login"  >About Us</button>
+                                                 <button mat-button class="btn-primary" (click)="fun()">Like</button>
+
+                                          </div>
+                                   </mat-card-actions>
+                            </mat-card>
+
+                            <mat-card class="mat-elevation-z4">
+                                   <mat-card-header>
+                                          <mat-card-title> How To Create Task ? </mat-card-title>
+                                   </mat-card-header>
+
+                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quam,
+                                          nisi deleniti nesciunt totam iure dolor modi accusamus
+                                          asperiores, iste dolore architecto. Ex maiores iusto sed quod
+                                          voluptates deleniti reprehenderit.</p>
+
+                                   <mat-card-content>
+                                          <p>
+                                                 Thankyou For Reading.
+                                          </p>
+                                   </mat-card-content>
+                                   <mat-card-actions>
+                                          <div class="text-center">
+                                                 <button mat-button mat-raised-button class="btn-success"
+                                                        style="width : 9em;" routerLink="../login"  >Create Task</button>
+                                                 <button mat-button class="btn-primary" (click)="fun()" >Like</button>
+
+                                          </div>
+                                   </mat-card-actions>
+                            </mat-card>
+
+
+                            <mat-card class="mat-elevation-z4">
+                                   <mat-card-header>
+                                          <mat-card-title> How To Create Meetings ?</mat-card-title>
+                                   </mat-card-header>
+
+                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quam,
+                                          nisi deleniti nesciunt totam iure dolor modi accusamus
+                                          asperiores, iste dolore architecto. Ex maiores iusto sed quod
+                                          voluptates deleniti reprehenderit.</p>
+
+                                   <mat-card-content>
+                                          <p>
+                                                 Thankyou For Reading.
+                                          </p>
+                                   </mat-card-content>
+                                   <mat-card-actions>
+
+                                          <div class="text-center">
+                                                 <button mat-button mat-raised-button class="btn-warning"
+                                                        style="width : 9em;" routerLink="../login"  >Create Meeting</button>
+                                                 <button mat-button class="btn-primary" (click)="fun()" >Like</button>
+
+                                          </div>
+
+
+                                   </mat-card-actions>
+                            </mat-card>
+
+                     </div>
+
+              </router-outlet>
+
+       </mat-drawer-content>
+
+</mat-drawer-container>
