--- a/SignUp/src/app/login/login.component.css
+++ b/SignUp/src/app/login/login.component.css
@@ -10,6 +10,7 @@
 	
 	opacity: 0.8;
 	font-family: sans-serif;
+	
 }
 .login-form{
 	padding: 20px;
@@ -48,7 +49,7 @@ a:link{
 	border-color: #270082;
 	border-width: 10px;
 	color: aliceblue;
-	color: white;
-  font-size: 18px;
-  width: 80%;
+	color: black;
+  	font-size: 18px;
+  	width: 80%;
 }
