--- a/SignUp/src/app/dashboard/dashboard.component.html
+++ b/SignUp/src/app/dashboard/dashboard.component.html
@@ -26,10 +26,7 @@
                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quam,
                                           nisi deleniti nesciunt totam iure dolor modi accusamus
                                           asperiores, iste dolore architecto. Ex maiores iusto sed quod
-                                          voluptates deleniti reprehenderit Lorem ipsum dolor sit amet consectetur
-                                          adipisicing elit. Architecto, distinctio! Dignissimos cum neque minima
-                                          inventore ab assumenda necessitatibus deleniti quam in praesentium accusantium
-                                          porro quia maiores ea eaque itaque magni, quisquam repellat quo nobis fugit.
+                                          voluptates deleniti reprehenderit.
                                    </p>
 
                                    <mat-card-content>
@@ -103,6 +100,61 @@
 
                      </div>
 
+                     <div class="content" fxLayoutGap="15px grid">
+
+                            <mat-card class="mat-elevation-z4">
+                                   <mat-card-header>
+                                          <mat-card-title> How To View Tasks ?  </mat-card-title>
+                                   </mat-card-header>
+
+                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quam,
+                                          nisi deleniti nesciunt totam iure dolor modi accusamus
+                                          asperiores, iste dolore architecto. Ex maiores iusto sed quod
+                                          voluptates deleniti reprehenderit.
+                                   </p>
+
+                                   <mat-card-content>
+                                          <p>
+                                                 Thankyou For Reading.
+                                          </p>
+                                   </mat-card-content>
+                                   <mat-card-actions>
+                                          <div class="text-center">
+                                                 <button mat-button mat-raised-button class="btn-info"
+                                                        style="width : 9em;" routerLink="../login"  >View Tasks</button>
+                                                 <button mat-button class="btn-primary" (click)="fun()">Like</button>
+
+                                          </div>
+                                   </mat-card-actions>
+                            </mat-card>
+                            <mat-card class="mat-elevation-z4">
+                                   <mat-card-header>
+                                          <mat-card-title> How To View Meetings ? </mat-card-title>
+                                   </mat-card-header>
+
+                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quam,
+                                          nisi deleniti nesciunt totam iure dolor modi accusamus
+                                          asperiores, iste dolore architecto. Ex maiores iusto sed quod
+                                          voluptates deleniti reprehenderit.
+                                   </p>
+
+                                   <mat-card-content>
+                                          <p>
+                                                 Thankyou For Reading.
+                                          </p>
+                                   </mat-card-content>
+                                   <mat-card-actions>
+                                          <div class="text-center">
+                                                 <button mat-button mat-raised-button class="btn-info"
+                                                        style="width : 9em;" routerLink="../login"  >View Meetings</button>
+                                                 <button mat-button class="btn-primary" (click)="fun()">Like</button>
+
+                                          </div>
+                                   </mat-card-actions>
+                            </mat-card>
+
+               </div>
+             
               </router-outlet>
 
        </mat-drawer-content>
