view-task updated

--- a/SignUp/src/app/view-task/view-task.component.html
+++ b/SignUp/src/app/view-task/view-task.component.html
@@ -1,1 +1,31 @@
-<p>view-task works!</p>
+<div class="container">
+    <table class="table table-bordered table-striped">
+      <thead>
+      <tr>
+        <th>Task ID</th>
+        <th>Task Name</th>
+        <th>Task Description</th>
+        <th>Assigned on</th>
+        <th>Created By</th>
+        <th>Action</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td><span>1</span></td>
+        <td><span>Complete Assignment</span></td>
+        <td><span>Create ppt</span></td>
+        <td><span>12/02/2022</span></td>
+        <td><span>khushi</span></td>
+        
+        <td>
+            
+            <button class="btn btn-sm btn-warning">
+              <i class="fa fa-edit"></i>Edit</button>
+            <button class="btn btn-sm btn-danger">
+              <i class="fa fa-remove"></i>Delete</button>
+          </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
