view task routing

--- a/SignUp/src/app/dashboard/dashboard.component.html
+++ b/SignUp/src/app/dashboard/dashboard.component.html
@@ -121,7 +121,7 @@
                                    <mat-card-actions>
                                           <div class="text-center">
                                                  <button mat-button mat-raised-button class="btn-info"
-                                                        style="width : 9em;" routerLink="../login"  >View Tasks</button>
+                                                        style="width : 9em;" routerLink="../view-task"  >View Tasks</button>
                                                  <button mat-button class="btn-primary" (click)="fun()">Like</button>
 
                                           </div>
