--- a/SignUp/src/app/sidenav/sidenav.component.html
+++ b/SignUp/src/app/sidenav/sidenav.component.html
@@ -17,7 +17,7 @@
     <a mat-list-item routerLink="../login"  routerLinkActive="list-item-active">
     <mat-icon >edit</mat-icon>Create Task </a>
 
-    <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
+    <a mat-list-item routerLink="../view-task" routerLinkActive="list-item-active">
     <mat-icon>photo_library</mat-icon> View Task   </a>
 
     <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
