create-task-dashboard created

--- a/SignUp/src/app/login/login.component.css
+++ b/SignUp/src/app/login/login.component.css
@@ -4,7 +4,7 @@
     padding: 5px;
     color:black;
     font-weight: bolder;
-	background: url(\Users\abhishek.solanki\Documents\GitHub\Frontend-sign-Login\SignUp\src\assets\bg.png) no-repeat;
+	background: url(\Users\nishant.saini\Documents\GitHub\Frontend-sign-Login\SignUp\src\assets\bg.png) no-repeat;
 	border: 20px;
 	background-size: cover;
 	
