--- a/SignUp/src/app/sidenav/sidenav.component.html
+++ b/SignUp/src/app/sidenav/sidenav.component.html
@@ -14,7 +14,7 @@
     <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
     <mat-icon>dashboard</mat-icon>About  </a>
 
-    <a mat-list-item routerLink="../login"  routerLinkActive="list-item-active">
+    <a mat-list-item routerLink="../create-task-dashboard" routerLinkActive="list-item-active">
     <mat-icon >edit</mat-icon>Create Task </a>
 
     <a mat-list-item routerLink="../view-task" routerLinkActive="list-item-active">
