--- a/SignUp/src/app/login/login.component.html
+++ b/SignUp/src/app/login/login.component.html
@@ -14,7 +14,7 @@
 				<input matInput type="password" id="text-box" placeholder="Enter-Password" >
 			</mat-form-field>
 
-			<button mat-raised-button type="submit" id="button" class="btn btn-primary btn-success">Login</button>
+			<button mat-raised-button type="submit" id="button" class="btn btn-primary btn-success" routerLink="../dashboard" >Login</button>
 		  </form>
 		  <p id="para">Don't have an account?</p>
 			<a id="para" routerLink="../signup" >Sign Up</a> 
