--- a/SignUp/src/app/view-task/view-task.component.css
+++ b/SignUp/src/app/view-task/view-task.component.css
@@ -4,3 +4,13 @@ table .btn{
   .container{
       margin-top: 10px;
   }
+  .table-bordered table-striped{
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    min-width: 400px;
+    border-radius: 5px 5px 0 0;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+
+  }
