--- a/SignUp/src/app/create-task-dashboard/create-task-dashboard.component.html
+++ b/SignUp/src/app/create-task-dashboard/create-task-dashboard.component.html
@@ -138,11 +138,14 @@
             
             <mat-step>
                 <ng-template matStepLabel>Done</ng-template>
-                <p>You are now done.</p>
+                <div fxLayoutAlign="center center">  
+                <div class="row">You are now done.</div> 
                 <div>
-                  <button mat-button matStepperPrevious>Back</button>
+                  <button  mat-button matStepperPrevious>Back</button>
                   <button mat-button (click)="stepper.reset()">Reset</button>
                 </div>
+
+            </div>
               </mat-step>
         </mat-stepper>
     </mat-card>
