--- a/SignUp/src/app/sidenav/sidenav.component.html
+++ b/SignUp/src/app/sidenav/sidenav.component.html
@@ -11,7 +11,7 @@
     <a mat-list-item routerLink="./dashboard" routerLinkActive="list-item-active">
     <mat-icon>home</mat-icon>Home   </a>
 
-    <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
+    <a mat-list-item routerLink="../aboutpage" routerLinkActive="list-item-active">
     <mat-icon>dashboard</mat-icon>About  </a>
 
     <a mat-list-item routerLink="../create-task-dashboard" routerLinkActive="list-item-active">
