--- a/SignUp/src/app/dashboard/dashboard.component.html
+++ b/SignUp/src/app/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
                                    <mat-card-actions>
                                           <div class="text-center">
                                                  <button mat-button mat-raised-button class="btn-info"
-                                                        style="width : 9em;" routerLink="../login"  >About Us</button>
+                                                        style="width : 9em;" routerLink="../aboutpage"   >About Us</button>
                                                  <button mat-button class="btn-primary" (click)="fun()">Like</button>
 
                                           </div>
