--- a/SignUp/src/app/sidenav/sidenav.component.html
+++ b/SignUp/src/app/sidenav/sidenav.component.html
@@ -20,10 +20,10 @@
     <a mat-list-item routerLink="../view-task" routerLinkActive="list-item-active">
     <mat-icon>photo_library</mat-icon> View Task   </a>
 
-    <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
+    <a mat-list-item routerLink="/createmeeting" routerLinkActive="list-item-active">
     <mat-icon>edit</mat-icon>Create Meetings </a>
 
-    <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
+    <a mat-list-item routerLink="/view-meeting" routerLinkActive="list-item-active">
     <mat-icon> local_post_office</mat-icon>View Meetings </a>
 
     <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
