--- a/SignUp/src/app/dashboard/dashboard.component.html
+++ b/SignUp/src/app/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
                             <span style="position:static"> DASHBOARD </span>
                      </mat-toolbar>
 
-                     <div class="content" fxLayoutGap="15px grid">
+                     <!-- <div class="content" fxLayoutGap="15px grid">
 
                             <mat-card class="mat-elevation-z4">
                                    <mat-card-header>
@@ -153,13 +153,107 @@
                                    </mat-card-actions>
                             </mat-card>
 
-               </div>
+               </div> -->
              
+
+
+               <!-- <mat-card class="mat-elevation-z4">
+                     <mat-card-header>
+                            <mat-card-title> Who Are We ? </mat-card-title>
+                     </mat-card-header> 
+              
+                  </mat-card>-->
+
+
+                     <main>
+
+                            <div class="div1">Box 1
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo perspiciatis provident hic eos totam accusantium corporis mollitia id! Temporibus laboriosam nemo culpa alias quis minus explicabo distinctio eaque! Modi, delectus!</p>
+
+                            <mat-card-content>
+                                   <p>
+                                          Thankyou For Reading.
+                                   </p>
+                            </mat-card-content>
+
+                            <mat-card-actions>
+                                   <div class="text-center">
+                                          <button mat-button mat-raised-button class="btn-info"
+                                                 style="width : 9em;" routerLink="../login"  >View Meetings</button>
+                                          <button mat-button class="btn-primary" (click)="fun()">Like</button>
+
+                                   </div>
+                            </mat-card-actions>
+
+                            </div>
+                            <div class="div2">Box 2
+                                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo perspiciatis provident hic eos totam accusantium corporis mollitia id! Temporibus laboriosam nemo culpa alias quis minus explicabo distinctio eaque! Modi, delectus!</p>
+                                   <mat-card-content>
+                                          <p>
+                                                 Thankyou For Reading.
+                                          </p>
+                                   </mat-card-content>
+       
+                                   <mat-card-actions>
+                                          <div class="text-center">
+                                                 <button mat-button mat-raised-button class="btn-info"
+                                                        style="width : 9em;" routerLink="../login"  >View Meetings</button>
+                                                 <button mat-button class="btn-primary" (click)="fun()">Like</button>
+       
+                                          </div>
+                                   </mat-card-actions>
+                            </div>
+                            <div class="div3">Box 3
+                                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo perspiciatis provident hic eos totam accusantium corporis mollitia id! Temporibus laboriosam nemo culpa alias quis minus explicabo distinctio eaque! Modi, delectus!</p>
+
+                                   <mat-card-content>
+                                          <p>
+                                                 Thankyou For Reading.
+                                          </p>
+                                   </mat-card-content>
+       
+                                   <mat-card-actions>
+                                          <div class="text-center">
+                                                 <button mat-button mat-raised-button class="btn-info"
+                                                        style="width : 9em;" routerLink="../login"  >View Meetings</button>
+                                                 <button mat-button class="btn-primary" (click)="fun()">Like</button>
+       
+                                          </div>
+                                   </mat-card-actions>
+
+                            </div>
+                            <div class="div4">Box 4
+                                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo perspiciatis provident hic eos totam accusantium corporis mollitia id! Temporibus laboriosam nemo culpa alias quis minus explicabo distinctio eaque! Modi, delectus!</p>
+
+                                   <mat-card-content>
+                                          <p>
+                                                 Thankyou For Reading.
+                                          </p>
+                                   </mat-card-content>
+       
+                                   <mat-card-actions>
+                                          <div class="text-center">
+                                                 <button mat-button mat-raised-button class="btn-info"
+                                                        style="width : 9em;" routerLink="../login"  >View Meetings</button>
+                                                 <button mat-button class="btn-primary" (click)="fun()">Like</button>
+       
+                                          </div>
+                                   </mat-card-actions>
+                                   
+                            </div>
+
+                     </main>
+           
+
+
+
               </router-outlet>
 
        </mat-drawer-content>
 
 </mat-drawer-container>
+
+
 
 <router-outlet>
        
