update dashboard component

--- a/SignUp/src/app/dashboard/dashboard.component.css
+++ b/SignUp/src/app/dashboard/dashboard.component.css
@@ -43,9 +43,9 @@ p {
 }
 
 main{
-    width: 90%;
+    /* width: 90%; */
     height: 100%;
-    margin: 50px auto;
+    /* margin: 50px auto; */
     padding: 10px;
     border: 1px solid black;
     display: grid ; color: black;
